fix navbar toggle on mobile
something long to explain taya... :smile:

--- a/contact.css
+++ b/contact.css
@@ -316,4 +316,59 @@
     .contact-form button {
         width: 100%;
     }
+
+    .menu-toggle {
+      display: block;
+    }
+  
+    .fa-bars {
+      color: var(--primary-color);
+    }
+  
+    .fa-times {
+      display: none;
+    }
+  
+    .nav-list {
+      background-color: #4c4c43;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      min-height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      transform: translateY(-100%);
+      transition: transform 0.5s;
+      z-index: 100;
+    }
+  
+    .nav-list li:not(:last-child) {
+      margin-right: 0;
+    }
+  
+    .nav-list li {
+      margin: 3.5rem 0;
+    }
+  
+    .menu-toggle.show .fa-bars {
+      display: none;
+    }
+  
+    .menu-toggle.show .fa-times {
+      display: block;
+    }
+  
+    .nav-list.show {
+      transform: translateY(0);
+    }
+  
+    .navbar a {
+      color: #e3ebf0;
+    }
+    .navbar .logo {
+      color: black;
+    }
+  
 }
